Tue Sep  9 19:22:44 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* subr.c (getcaller): If SYSTEM_GETCALLER is defined, call it
	instead of all the getlogin/getpwuid/etc.
	* wrapper.c (wrap_setup): Call get_homedir not getpwuid.

Mon Sep  8 17:54:14 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (basicc): Change ls -1 to echo *; according to
	larry.jones@sdrc.com, ls -1 isn't portable.

Sun Sep  7 07:45:35 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (basic2): In test basic2-64, match usernames with
	${username}.

	* root.c: Reindent a few things.
	* root.c, cvs.h (same_directories): Remove.  Never used,
	portability hassle.

	* add.c (add_directory): When checking for CVSADM, call fncmp not
	strcmp.  I actually suspect this code doesn't do much these days,
	but fncmp clearly will make more sense than strcmp.

	* rtag.c (rtag_usage), tag.c (tag_usage): Reword to hopefully be
	clearer that -r takes either numeric or symbolic revision.

	* ignore.c (ign_dir_add, ignore_directory): Reindent.  Tweaks to
	comments.

	* update.c (checkout_file): Only ignore existence_error from
	unlink_file_dir, not all errors.

	* checkout.c (safe_location): Check for errors from xgetwd.
	* create_adm.c (Create_Admin): Remove call to xgetwd; it is just
	debugging code anyway and it wasn't checking for errors.

	* sanity.sh: Add comment about default value for TESTDIR.

	* server.c (serve_log): Change "cvslog" to "log".  This
	(accidental, I presume) error had made it impossible for anonymous
	users to run "cvs log".

	* classify.c (sticky_ck): Change to take an finfo argument rather
	than several arguments taken from there.  Cleans up the way the
	calling convention had depended on SERVER_SUPPORT.
	(Classify_File): Change callers.

	* version.c: Change version number to 1.9.17.

	* Version 1.9.16.

	* recurse.c (do_dir_proc): In combining repository and dir, omit
	trailing "/." from repository.